# python-template

./: .aider.conf.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  tasks.py
.github/workflows/: ci.yml
docs/: customizing-template.md  dependencies.md  development-tasks.md  getting-started.md  project-structure.md  tips-and-tricks.md
tests/: test_example.py
